# Portfolio

./: README.md  test.html
Frontend/: README.md  index.html  package-lock.json  package.json
Frontend/src/: App.tsx  index.css
Frontend/src/components/chat/: ChatInterface.tsx  ChatMessage.tsx  ChatMessages.tsx
Frontend/src/components/layout/: Sidebar.tsx
Frontend/src/components/sections/: AboutSection.tsx  ChatSection.tsx  HeaderSection.tsx  ProjectsSection.tsx
Frontend/src/components/ui/: input.tsx
Frontend/src/pages/: Index.tsx  Welcome.tsx
backend/: .gitignore  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: chat.py  config.py  upload.py
backend/app/core/: engine.py  loader.py  settings.py
backend/app/schemas/: chat.py
backend/cache/: default__vector_store.json  docstore.json  index_store.json
backend/data/: answers.json  funfacts.json  raginfo.json
