[tool.poetry]
name = "aelhady-backend"
version = "0.1.0"
description = "Python backend for Amr Elhady's portfolio"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
# Dependencies are managed in requirements.txt for this example,
# but you could list them here if using Poetry.